; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/sntp/tests/extr_run-keyFile.c_main.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/sntp/tests/extr_run-keyFile.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@progname = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [10 x i8] c"keyFile.c\00", align 1
@test_ReadEmptyKeyFile = common dso_local global i32 0, align 4
@test_ReadASCIIKeys = common dso_local global i32 0, align 4
@test_ReadHexKeys = common dso_local global i32 0, align 4
@test_ReadKeyFileWithComments = common dso_local global i32 0, align 4
@test_ReadKeyFileWithInvalidHex = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = load i8**, i8*** %5, align 8
  %7 = getelementptr inbounds i8*, i8** %6, i64 0
  %8 = load i8*, i8** %7, align 8
  store i8* %8, i8** @progname, align 8
  %9 = call i32 (...) @suite_setup()
  %10 = call i32 @UnityBegin(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  %11 = load i32, i32* @test_ReadEmptyKeyFile, align 4
  %12 = call i32 @RUN_TEST(i32 %11, i32 12)
  %13 = load i32, i32* @test_ReadASCIIKeys, align 4
  %14 = call i32 @RUN_TEST(i32 %13, i32 13)
  %15 = load i32, i32* @test_ReadHexKeys, align 4
  %16 = call i32 @RUN_TEST(i32 %15, i32 14)
  %17 = load i32, i32* @test_ReadKeyFileWithComments, align 4
  %18 = call i32 @RUN_TEST(i32 %17, i32 15)
  %19 = load i32, i32* @test_ReadKeyFileWithInvalidHex, align 4
  %20 = call i32 @RUN_TEST(i32 %19, i32 16)
  %21 = call i32 (...) @UnityEnd()
  ret i32 %21
}

declare dso_local i32 @suite_setup(...) #1

declare dso_local i32 @UnityBegin(i8*) #1

declare dso_local i32 @RUN_TEST(i32, i32) #1

declare dso_local i32 @UnityEnd(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
